--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "zustand": "^4.4.4"
+    "zustand": "4.4.4"
   },
   "devDependencies": {
     "@types/react": "18.2.15",
